# StructurePulse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_instruments.py  0002_create_universe.py  0003_create_market_data.py  0004_create_aggregation.py  0005_create_strategy.py  0006_create_signals.py  0007_add_trade_tracking.py  0008_add_signal_funding.py  0009_create_telegram_outbox.py  0010_create_evaluation_windows.py  0011_create_live_executions.py  0012_add_live_execution_real_pnl.py  0013_raise_telegram_minimum_score.py
docs/: architecture.md  live-observation.md  operations.md  replay.md  requirements.md  signals.md  smc-core.md  strategy.md  tasks.md  telegram.md
scripts/: profile_smc_core.py  smoke_test.py
src/crypto_smc/: __init__.py  (+2 more)
tests/: test_aggregation_domain.py  test_aggregation_reconciliation.py  test_aggregation_service.py  test_analysis_process_pool.py  test_api.py  test_bybit_client.py  test_bybit_private_client.py  test_bybit_websocket.py  test_coingecko_client.py  test_config.py  test_live_execution_service.py  test_live_market_data.py  test_market_data_backfill.py  test_observation.py  test_operations.py  test_replay.py  test_signal_lifecycle.py  test_signal_policy.py  test_smc_core_boundaries.py  test_smc_core_primitives.py  test_smc_core_validation.py  test_strategy_analysis_service.py  test_strategy_evaluator.py  test_telegram.py  test_telegram_rendering.py  test_universe_policy.py  test_universe_refresh.py  test_worker_cycle.py
(+108 files in other folders)
