[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-smc-bot"
version = "0.1.0"
description = "Bybit USDT perpetual Smart Money Concepts signal monitor"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "prometheus-client>=0.21,<1",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "structlog>=24.4,<26",
    "uvicorn[standard]>=0.34,<1",
    "websockets>=16,<17",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_smc", "src/smc_core"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.ruff.lint.isort]
known-third-party = ["alembic"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["crypto_smc", "smc_core"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true
